# quantTradingBot

./: .env.example  .gitignore  DEPLOY_VPS.md  Dockerfile  README.md  README_AUTOREPORT.md  docker-compose.yml  example_multi_run.json  ledger.csv  multi_run_binance_demo_v1_aggressive.json  multi_run_binance_demo_v2_conservative.json  multi_run_binance_eth_small.json  pyproject.toml
namoo_bridge/: README.md  server.py  wmca_client.py
ops/: README.md
ops/linux/: run_compare.sh  run_report.sh  systemd-quantbot-multirunner.service
ops/windows/: OPS_WINDOWS.md  install_nssm_service.ps1  install_tasks.ps1  run_compare.ps1  run_dashboard.ps1  run_live_with_monitor.bat  run_multi_runner.ps1  run_report.ps1  scalp_state_watch.ps1  uninstall_nssm_service.ps1
quantbot/: config.py  journal.py  live.py  main.py  multi_runner.py  preflight.py  presets.py
quantbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
quantbot/bar_builder/: resampler.py
quantbot/cli/: init_db.py
quantbot/collectors/: binance_rest.py  demo_market.py  store.py  upbit_rest.py
quantbot/common/: types.py
quantbot/dashboard/: server.py
quantbot/execution/: executor.py
quantbot/features/: indicators.py  orderbook.py  orderbook_depth.py
quantbot/news/: keyword.py  rss_listener.py
quantbot/reporting/: auto_report.py  compare_report.py  performance.py
quantbot/risk/: cooldown.py  exits.py  global_exposure.py  position_tracker.py  risk_manager.py
quantbot/storage/: db.py  models.py
quantbot/strategy/: blender.py  scalping.py
quantbot/streams/: flow.py  (+5 more)
(+22 files in other folders)
